android/ios config

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: "com.android.application"
 apply plugin: 'com.google.gms.google-services'
 
 project.ext.vectoricons = [
-    iconFontNames: [ 'Ionicons.ttf', "MaterialCommunityIcons.ttf", ] // Name of the font files you want to copy
+    iconFontNames: [ "FontAwesome5.ttf", ] // Name of the font files you want to copy
 ]
 apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 
