--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-firebase/app": "^14.1.0",
     "@react-native-firebase/auth": "^14.1.0",
     "@react-native-firebase/firestore": "^14.1.0",
+    "@react-native-firebase/storage": "^14.2.2",
     "@react-navigation/bottom-tabs": "6.0.9",
     "@react-navigation/drawer": "5.12.4",
     "@react-navigation/native": "^6.0.6",
@@ -22,6 +23,7 @@
     "react": "17.0.2",
     "react-native": "0.66.3",
     "react-native-gesture-handler": "1.10.3",
+    "react-native-image-picker": "^4.7.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "1.4.0",
     "react-native-safe-area-context": "^3.3.2",
@@ -29,6 +31,7 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^9.0.0",
+    "validator": "^13.7.0",
     "victory-native": "^36.2.0"
   },
   "devDependencies": {
