--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "@react-navigation/stack": "^6.0.11",
     "react": "17.0.2",
     "react-native": "0.66.3",
-    "react-native-gesture-handler": "1.10.3",
+    "react-native-gesture-handler": "^2.2.0",
+    "react-native-image-colors": "^1.5.0",
     "react-native-image-picker": "^4.7.1",
     "react-native-linear-gradient": "^2.5.6",
-    "react-native-reanimated": "1.4.0",
+    "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-snap-carousel": "^3.9.1",
